--- a/README
+++ b/README
@@ -24,4 +24,16 @@ which will build the C extensions in place next to their source,
 allowing you to import the various modules, so long as your current
 working directory is the root of the PyAFS source tree.
 
+Alternatively, PyHesiod has been packaged for Debian and Ubuntu. To
+build the Debian package of the latest release, run::
+
+  $ git checkout debian
+  $ git buildpackage
+  $ sudo debi
+
+You will need the devscripts and git-buildpackage packages installed,
+as well as this package's build dependencies (cdbs, debhelper,
+python-all-dev, python-support, python-pyrex, python-setuptools,
+libopenafs-dev).
+
 .. _Cython: http://cython.org/
