--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-afs (0.1.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Evan Broder <broder@mit.edu>  Mon, 07 Dec 2009 17:58:34 -0500
+
 python-afs (0.1.0-2) unstable; urgency=low
 
   * Correct build-deps.
